@@ -32,8 +32,9 @@ def main():
     # beefed up %env is handy in shell mode
     import envpersist
     import ipy_which
-    import ipy_stock_completers
+    import ipy_app_completers
     import ipy_rehashdir
+    import ipy_signals
     
     
     ip.ex('import os')
